# evtsigslot

./: CMakeLists.txt  README.md
include/evtsigslot/: binding.h  copy_on_write.h  event.h  func_ptr.h  group.h  mutex.h  signal.h  slot.h  slot_state.h  slot_traits.h  traits.h
test/: signal-performance.cpp  signal-test.cpp  signal-thread.cpp  signal.cpp
